# nc_share

./: .gitignore  LICENSE  README.md  nc_share.py  nextcloud.py  setup.cfg
