[metadata]
name = nc_share
version = 0.1.1
author = Christopher Arndt
author_email = info@chrisarndt.de
description = A simple script to upload an image to a Nextcloud server and create a sharing link
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpotlightKid/nc_share
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages =
    nc_share
package_dir =
    nc_share = .
install_requires =
    keyring
    pyperclip
    requests >= 2.0.1
    six

[options.entry_points]
console_scripts =
    nc_share = nc_share.nc_share:main

[flake8]
max-line-length = 100
ignore = E116,E266,E731,W504
